Connected Firebase RT to Muscle/Builder activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="abs_trans">abs</string>
     <string name="cardio_trans">cardio</string>
     <string name="crossfit_trans">crossfit</string>
+    <string name="equipment">Equipment</string>
 </resources>
