--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="cardio_trans">cardio</string>
     <string name="crossfit_trans">crossfit</string>
     <string name="equipment">Equipment</string>
+    <string name="delete">DELETE</string>
 </resources>
