Progress screens done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,36 @@
     <string name="crossfit_trans">crossfit</string>
     <string name="equipment">Equipment</string>
     <string name="delete">DELETE</string>
+    <string name="lets_calculate_together">LETS CALCULATE TOGETHER!</string>
+    <string name="tdee_total_daily_energy_expenditure">TDEE : Total Daily Energy Expenditure</string>
+    <string name="my_age_is">My Age Is</string>
+    <string name="my_height_is">My Height Is</string>
+    <string name="my_weight_is">My Weight Is</string>
+    <string name="age">Age</string>
+    <string name="height">Height</string>
+    <string name="weight">Weight</string>
+    <string name="describe_your_daily_activity_level">Describe Your Daily Activity Level</string>
+    <string name="days_per_week">Days Per Week</string>
+    <string name="how_intense_is_your_exercise">How Intense Is Your Exercise</string>
+    <string name="calculate">Calculate</string>
+    <string name="reset">Reset</string>
+    <string name="your_tdee_is">Your TDEE Is</string>
+    <string name="please_select_your_goal">Please Select Your Goal</string>
+    <string name="to_reach_your_goal_you_will_need_to_consume">To reach your goal, you will need to consume</string>
+    <string name="calories">\u0020Calories</string>
+    <string name="calories_from_protein">Calories from Protein\u0020</string>
+    <string name="grams">\u0020 grams</string>
+    <string name="calories_from_fat">Calories from fat\u0020</string>
+    <string name="swirl">\u0020~\u0020</string>
+    <string name="scrub_empty">Tap and hold the graph to scrub.</string>
+    <string name="scrub_format">Weight: %1$s</string>
+    <string name="calories_from_carbs">Calories from Carbs\u0020</string>
+    <string name="it_s_a_bit_lonely_here">It\'s a bit lonely here....</string>
+    <string name="get_started_by_adding_a_workout">Get started by adding a workout</string>
+    <string name="_1y">1Y</string>
+    <string name="_1m">1M</string>
+    <string name="_1w">1W</string>
+    <string name="sign">-</string>
+    <string name="add">Add</string>
+
 </resources>
