--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">fitz</string>
     <string name="sign_out">Sign Out</string>
-
+    <string name="Fitz">Fitz</string>
     <string name="loading">Loading…</string>
     <string name="signed_in">Signed In</string>
     <string name="desc_firebase_lockup">Firebase logo and name</string>
@@ -82,6 +82,12 @@
     <string name="add">Add</string>
     <string name="next">NEXT</string>
     <string name="let_s_name_your_workout_days">Let\'s Name your workout days</string>
+    <string name="name">name</string>
+    <string name="your_current_calorie_instake_is">Your current daily calorie instake is</string>
+    <string name="please_calc">Please calculate your macros</string>
+    <string name="set_default">Set Default</string>
+    <string name="fitz_fitness_lifestyle"><![CDATA[Fitz - Fitness & Lifestyle]]></string>
+    <string name="vyvital">vyvital</string>
 
 
 </resources>
