--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,6 +88,7 @@
     <string name="set_default">Set Default</string>
     <string name="fitz_fitness_lifestyle"><![CDATA[Fitz - Fitness & Lifestyle]]></string>
     <string name="vyvital">vyvital</string>
+    <string name="save">save</string>
 
 
 </resources>
