added FAQ, finish dialog, other stuff

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,6 +98,8 @@
     <string name="program">Program</string>
     <string name="start">Start</string>
     <string name="pause">Pause</string>
+    <string name="ok">OK</string>
+    <string name="faq">FAQ</string>
 
 
 </resources>
